# lantern

./: .gitignore  Makefile  README.md  data.db  frontend.ps1  main.py  noxfile.py  package-lock.json  package.json  pyproject.toml  setup.ps1  setup.sh
.github/workflows/: test.yml
dataframes/: load.pkl  pv.pkl
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  i18n.ts  index.css
frontend/src/components/: LanguageSwitcher.css  LanguageSwitcher.tsx  TradingNetworkForceGraph.tsx  TradingNetworkGraph.tsx
frontend/src/locales/de/: translation.json
frontend/src/locales/en/: translation.json
frontend/src/locales/fr/: translation.json
frontend/src/locales/it/: translation.json
lantern/: __init__.py  app.py  battery.py  constants.py  data_loader.py  ec_dataset.py  main.py  market_solution.py  models.py  plot_utils.py
lantern/static/css/: styles.css
src/: app.py  constants.py  ec_dataset.py  main.py  market_solution.py  models.py  plot_utils.py
src/static/js/: app.js
tests/: simulation_test.py
