[tool.poetry]
name = "lantern"
version = "0.1.0"
description = "LEC simulation tool"
authors = ["Sascha Kehrli <skehrli@ethz.ch>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
pandas = "^2.2.2"
black = "^24.8.0"
scipy = "^1.14.1"
pandas-stubs = "^2.2.2.240909"
scipy-stubs = "^1.4.1a3"
requests = "^2.32.3"
duckdb = "^1.2.0"
types-seaborn = "^0.13.2.20250111"
types-requests = "^2.32.0.20241016"
types-networkx = "^3.4.2.20241227"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
plotly = "^6.0.0"
pydantic = "^2.10.6"
seaborn = "^0.13.2"
networkx = "^3.4.2"
pytest = "^8.3.5"
coverage = "^7.6.12"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
back = "poetry run uvicorn lantern.app:app --reload"
run = "poetry run python -m lantern.main"
front-win = "powershell -File frontend.ps1"

[tool.poe.tasks.front-unix]
shell = """
cd ./frontend
if [ ! -d ./node_modules ]; then
  npm install
fi
npm run dev
"""
